// SPDX-License-Identifier: Apache-2.0
syntax = "proto3";

package com.hedera.hapi.platform.message;

option java_package = "com.hedera.hapi.platform.message.legacy";
// <<<pbj.java_package = "com.hedera.hapi.platform.message">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * Message exchanged by rpc sync protocol to measure ping time between the nodes in context of rpc communication. Same message is used by both sender and as a reply.
 */
message GossipPing {
  /**
   * Timestamp in milliseconds since start of epoch
   */
  int64 timestamp = 1;

  /**
   * Correlation id assigned by sender, to be repeated in reply
   */
  int64 correlationId = 2;
}